# modernizacao-manejo-api

./: .dockerignore  .env  .env.dev  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  compose.yaml  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  locustfile.py  main.py  nginx.conf  pyproject.toml  requirements.txt
.aws/: task-definition.json
.github/: dependabot.yml
.github/workflows/: aws.yml  build.yml  ci.yml  deploy.yml  pylint.yml  smokeshow.yml  test.yml
app/: config.py  crud.py  database.py  errors.py  main.py  models.py  repository.py  security.py  settings.py  telemetry.py  utils.py
app/controllers/: animal.py  animal_controller.py  base.py  base_controller.py  cargo.py  dieta.py  fazenda.py  fazendeiro.py  fazendeiro_controller.py  lote.py  lote_log.py  peso_log.py  pessoa.py  propriedade.py  raca.py  user.py  usuario_controller.py
app/core/: security.py  settings.py
app/crud/: animal.py  cargo.py  fazenda.py  fazendeiro.py  pesagem.py  peso_log.py  pessoa.py  propriedade.py  raca.py  usuario.py
app/models/: animal.py  animal_weight.py  animal_weight_type.py  batch.py  batch_log.py  breed.py  cargo.py  dieta.py  employment.py  employment_position.py  farm.py  farmer.py  farmer_plan.py  fazenda.py  fazendeiro.py  lote.py  lote_log.py  pesagem.py  peso_log.py  pessoa.py  propriedade.py  raca.py  user.py  user_type.py  usuario.py
app/repositories/: animal.py  base.py  cargo.py  dieta.py  fazenda.py  fazendeiro.py  login.py  lote.py  lote_log.py  peso_log.py  pessoa.py  propriedade.py  raca.py  repository.py  user.py
app/routes/: animal.py  animal_weight.py  animal_weight_type.py  batch.py  batch_log.py  breed.py  cargo.py  dieta.py  employment.py  employment_position.py  farm.py  farmer.py  farmer_plan.py  fazenda.py  fazendeiro.py  login.py  lote.py  lote_log.py  pesagem.py  peso_log.py  pessoa.py  propriedade.py  raca.py  token.py  user.py  user_type.py  usuario.py
app/schemas/: animal.py  animal_weight.py  animal_weight_type.py  batch.py  batch_log.py  breed.py  cargo.py  dieta.py  employment.py  employment_position.py  farm.py  farmer.py  farmer_plan.py  fazenda.py  fazendeiro.py  login.py  lote.py  lote_log.py  pesagem.py  peso_log.py  pessoa.py  propriedade.py  raca.py  raises.py  user.py  user_type.py  usuario.py
app/services/: animal.py  animal_service.py  base.py  base_service.py  cargo.py  cargo_service.py  dieta.py  fazenda.py  fazenda_service.py  fazendeiro.py  fazendeiro_service.py  login.py  lote.py  lote_log.py  lote_log_service.py  lote_service.py  peso_log.py  peso_log_service.py  pessoa.py  pessoa_service.py  propriedade.py  propriedade_service.py  raca.py  raca_service.py  user.py  usuario_service.py
app/utils/: db.py  enum.py  message.py  response.py  type.py
crud/: animal.py  pesagem.py
database/: db.py  db_acess.py
etc/: dashboards.yaml
etc/dashboards/: fastapi-observability.json  manejo-api.json
etc/grafana/: datasource.yml
etc/prometheus/: prometheus.yml
json/: contfazenda.json  fazenda.json  login.json  notificações.json
migrations/: env.py
migrations/versions/: 05684a1d1ae5_init.py  0a7dbc3b7e05_init_database.py  0cbc781efe24_init_database.py  1238dab14c5f_inicio.py  2f21bb73462a_init.py  4348a54320e2_init_database.py  436c61f7e398_adjusting_optional_fill_columns_when_.py  44ea50c1d3ae_init_database.py  520a94e94127_remove_animal_weight_type_table.py  5d3b7526155e_rename_animal_id_column_for_animal_tag_.py  8348701904be_init.py  97a3fa496a69_populate.py  9bb56c46c619_init_database.py  9ebcb3d8416e_init.py  9ed4b7b0a70d_populate.py  a0c243e6daae_renomeado_campos_mae_e_pai_animal.py  a50746433ed5_init_database.py  a86e37fb3f31_updating_origin_column_in_animal_table.py  b2a46c01af9c_inicio.py  cc54055ba5b3_init_database.py  d3680270937b_inicio.py  df71f556b7f3_inicio.py  f101ee2246e1_criando_tabela_dieta.py  f665851e07e7_init_database.py  fbfd732f9aff_pessoa_nascimento.py  fdb4dd920e7a_cpf.py
models/: animal.py  cargo.py  fazenda.py  fazenda_pessoa.py  fazendeiro.py  pesagem.py  pessoa.py  usuario.py
routes/: animal.py  cargo.py  db.py  fazenda.py  pesagem.py  pessoa.py  usuario.py
schemas/: animal.py  fazenda.py  pesagem.py
scripts/: commands.sh
serializer/: animal.py  cargo.py  fazenda.py  fazenda_pessoa.py  fazendeiro.py  pesagem.py  pessoa.py  usuario.py
tests/: conftest.py  factories.py  test_animal.py  test_animal_weight.py  test_app.py  test_breed.py  test_farmer.py  test_security.py  test_user.py  test_user_type.py
