[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Henrique Sebastião <henriquesebastiao.web@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = "^2.0.36"
pydantic = {extras = ["email"], version = "^2.9.2"}
alembic = "^1.14.0"
pydantic-settings = "^2.6.1"
fastapi = {extras = ["standard"], version = "^0.115.5"}
python-multipart = "^0.0.17"
psycopg = {extras = ["binary"], version = "^3.2.3"}
pyjwt = "^2.9.0"
pwdlib = {extras = ["argon2"], version = "^0.2.1"}
greenlet = "^3.1.1"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.0.0"
taskipy = "^1.14.0"
httpx = "^0.27.2"
ruff = "^0.7.3"
testcontainers = "^4.8.2"
pytest = "^8.3.3"
pytest-factoryboy = "^2.7.0"
pytest-asyncio = "^0.24.0"
gevent = "^24.11.1"
radon = "^6.0.1"
bandit = "^1.7.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.lint.per-file-ignores]
'tests/*.py' = ['PLR2004']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'
asyncio_mode = 'auto'

[tool.coverage.run]
concurrency = ["thread", "gevent"]

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff format .; ruff check . --fix'
radon = 'radon cc ./app -a -na'
bandit = 'bandit -r ./app'
run = 'fastapi dev app/main.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=app -vv'
post_test = 'coverage html'
export = 'poetry export -f requirements.txt  --without-hashes --without dev > requirements.txt'
logs = 'docker container logs app-manejo-dev'