[project]
name = "modernizacao-manejo-api"
version = "0.1.0"
description = "API async robusta para gestão de rebanhos construída com FastAPI."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.0",
    "fastapi[standard]>=0.115.6",
    "greenlet>=3.1.1",
    "opentelemetry-distro>=0.50b0",
    "opentelemetry-exporter-otlp>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-logging>=0.50b0",
    "phonenumbers>=8.13.52",
    "prometheus-client>=0.21.1",
    "psycopg[binary]>=3.2.4",
    "pwdlib[argon2]>=0.2.1",
    "pydantic-core>=2.27.2",
    "pydantic-extra-types>=2.10.1",
    "pydantic-settings>=2.7.1",
    "pydantic[email]>=2.10.0",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.37",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "gevent>=24.11.1",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
    "pytest-factoryboy>=2.7.0",
    "pytest>=8.3.4",
    "radon>=6.0.1",
    "ruff>=0.7.4",
    "taskipy>=1.14.1",
    "testcontainers>=4.9.0",
    "bandit>=1.8.2",
    "ipython>=8.31.0",
    "locust>=2.32.6",
]

[tool.uv]
upgrade = true

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.lint.per-file-ignores]
'tests/*.py' = ['PLR2004']
'main.py' = ['E501', 'PLR6301']
'telemetry.py' = ['F841']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'
asyncio_mode = 'auto'

[tool.coverage.run]
concurrency = ["thread", "gevent"]

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff format .; ruff check . --fix'
radon = 'radon cc ./app -a -na'
bandit = 'bandit -r ./app'
run = 'fastapi dev app/main.py'
pre_test = 'task lint'
test = 'export TEST=1 && pytest -s -x --cov=app -v'
post_test = 'coverage html'
ready = 'task lint; task radon; task bandit; task test'
export = 'uv export --no-hashes --no-dev > requirements.txt'
locust = 'locust -f locustfile.py'
